log/build_2024-11-26_20-12-05/ros2_sheep/stderr.log
  File "/home/teja/ros2_hunter/install/ros2_sheep/lib/python3.10/site-packages/ros2_sheep/hunter_node.py", line 1
    kimport rclpy
            ^^^^^
SyntaxError: invalid syntax

